# model-template

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: README.md  deploy.yml
model/: MakeFile
model/infra/: index.ts  package-lock.json  package.json
model/src/model/serving/: main.py
model/src/model/training/: train.py
