[tool.poetry]
name = "model"
version = "0.1.0"
description = "my_toml"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
scikit-learn = "1.2.1"
scipy = "1.10.0"
conda-lock = "^1.4.0"
lightgbm = "3.3.5"
mlflow = "2.1.1"
boto3 = "1.24.59"
dvc-s3 = "2.21.0"
fastapi = "0.89.1"
uvicorn = "0.20.0"

[tool.poetry.scripts]
train = "src.model.training.train:main"
serve = "src.model.serving.main:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
